--- a/ulink/api/docs/schedule/scheduleSpecificIdx.yaml
+++ b/ulink/api/docs/schedule/scheduleSpecificIdx.yaml
@@ -104,7 +104,7 @@ put:
           required:
             - color
           properties:
-            name:
+            color:
               type: number
               example: 2
           type: object
